--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,16 +14,14 @@ Imports:
     ggplot2,
     ggtext,
     glue,
+    hrbrthemes,
     htmltools,
     pkgload,
     rstanarm,
     shiny,
     shinydashboard,
     showtext,
-    tidyr,
-    wjake
-Remotes:
-    wjakethompson/wjake
+    tidyr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
